# MyChat

./: CMakeLists.txt  README.md  autoBuild.sh  dbconf.json
include/: public.hpp
include/server/: GroupUser.hpp  chatserver.hpp  chatservice.hpp  friendmodel.hpp  group.hpp
include/server/db/: Connection.h  ConnectionPool.h  db.h
include/server/model/: group.hpp  groupmodel.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: Connection.cpp  ConnectionPool.cpp  db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usrmodel.cpp
src/server/redis/: redis.cpp
test/: a.out  json_t  json_t.cpp  test.cpp
